Archive2/22/b2cbbd2b5637a6/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:39:47: error: wrong type argument to bit-complement
     auto baby = rob->penis <~~~~~~~~~~~ toon->penis;
                                               ^
